[tool.poetry]
name = "homeassistant-elasticsearch"
version = "0.7.0"
description = ""
authors = ["Larry Gregory <lgregorydev@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "elasticsearch", from = "custom_components" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
elasticsearch7 = "~=7.11.0"

[tool.poetry.group.dev.dependencies]
colorlog = "==6.7.0"
homeassistant = "==2023.11.1"
ruff = ">=0.0.291"
pip = ">=21.0,<23.4"

[tool.poetry.group.test.dependencies]
pytest = ">=7.3.1"
pytest-asyncio = ">=0.20.3"
pytest-cov = ">=4.0.0"
pytest-homeassistant-custom-component = ">=0.13.45"
jsondiff = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.coverage.html]
directory = "test_results/cov_html"

[tool.coverage.xml]
output = "test_results/cov_xml/coverage.xml"

[tool.pytest.ini_options]
addopts = [
  "-rxf",
  "-x",
  "-v",
  "-l",
  "--asyncio-mode=auto",
  "--junitxml=test_results/pytest.xml",
  "--cov=./custom_components",
  "--cov-report=xml",
  "--cov-report=html",
]
filterwarnings = ["ignore:ssl.PROTOCOL_TLS is deprecated:DeprecationWarning"]
testpaths = ["tests"]
python_files = ["test_*.py"]
